# TestInclude

./: .clang-tidy  CMakeLists.txt
src/test1/: A.h  B.h  C.h
src/test2/: A.h  C.h  test2.cpp
